Configure docz to see the documentation

--- a/index.mdx
+++ b/index.mdx
@@ -1,3 +1,7 @@
+---
+name: About
+route: /
+---
 
 # Experimetality
 
@@ -24,6 +28,7 @@ The app allows you:
 ## Instaling
 
 To see the project:
+
 1. Clone the repository.
 2. Run `yarn`.
 3. Run `yarn start`.
