--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ The app allows you:
 - Search videos.
 - See six recommended videos according to your search.
 - Watch the video selected.
-- See video info like title, description, like count, dislike count and comment count
+- See video info like title, description, like count, dislike count and comment count.
 
 ## Technologies
 - [Create-react-app](https://facebook.github.io/create-react-app/docs/getting-started)
@@ -34,10 +34,10 @@ To see the project:
 3. Run `yarn start`.
 4. Visit http://localhost:3000/.
 
-Also, you can se the demo here: [Experimentaly demo](https://experimentality.netlify.com)
+Also, you can se the demo here: [Experimentaly demo](https://experimentality.netlify.com).
 
 ## Test
-To test, you must run `yarn test`
+To test, you must run `yarn test`.
 
 ## Docs
 For the documentation I used `Docz`. This package allows you to see all documentation in a single page with basic usage examples for each components.
