--- a/src/docs/Header.mdx
+++ b/src/docs/Header.mdx
@@ -3,6 +3,7 @@ name: Header
 route: /components/Header
 menu: Components
 ---
+
 import { Playground, Props } from 'docz'
 import Header from '../components/Header'
 
@@ -12,13 +13,13 @@ Header is a component where the user can search videos according to the paramete
 ## Properties
 
 | Name          | Type     | Required   |Description                               |
-|:-------------|:--------:|:----------:|:-----------------------------------------|
-| handleSubmit | Funct    | true       | This functions is in charge of searching for videos according to parameter passed|
+|:--------------|:--------:|:----------:|:-----------------------------------------|
+| handleSubmit  | Func     | true       | This functions is in charge of searching for videos according to parameter passed|
 
 
 ## Basic usage
 
 <Playground>
-  <Header />
+  <Header handleSubmit={(data) => console.log(data)} />
 </Playground>
 
